--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.11.1-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Tue, 25 May 2004 02:38:21 -0600
+
 cl-sql (2.11.0-1) unstable; urgency=low
 
   * New upstream
