--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@
 	* sql/metaclasses.lisp: Convert specified type VARCHAR and (VARCHAR n) to Lisp
 	type string. Convert specified-type (CHAR n) to string. Convert specified-type
 	CHAR to lisp type character.
+	* sql/generic-postgresql.lisp: (string n) => (CHAR n)
 	
 25 May 2004 Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 2.11.1 released: Much simpler Oracle client library loading.
