r9480:         * sql/operations.lisp: Add userenv         * doc/TODO: Add AUTOCOMMIT

--- a/doc/TODO
+++ b/doc/TODO
@@ -52,6 +52,7 @@ DOCUMENTATION TO DO LIST
 
  - CONNECT: :make-default and :pool keyword args. 
 
+ - Tranactions: AUTOCOMMIT
 
 4. Documenting lower level, non-CommonSQL functions (some of this is already 
    done). 
