--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,8 @@
 	type string. Convert specified-type (CHAR n) to string. Convert specified-type
 	CHAR to lisp type character.
 	* sql/generic-postgresql.lisp: (string n) => (CHAR n)
+	* sql/operations.lisp: Add userenv
+	* doc/TODO: Add AUTOCOMMIT
 	
 25 May 2004 Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 2.11.1 released: Much simpler Oracle client library loading.
