--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+cl-sql (2.11.2-1) unstable; urgency=low
+
+  * New upstream
+  * Add cl-sql-oracle binary package	
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Wed, 26 May 2004 09:10:12 -0600
+
 cl-sql (2.11.1-1) unstable; urgency=low
 
   * New upstream
