--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+26 May 2004 Kevin Rosenberg <kevin@rosenberg.net>
+	* sql/oodml.lisp: Commit universal-time typo patch from Edi Weitz
+	* test/test-init.lisp: Add universal-time slot to person.
+	* test/test-fddl.lisp: Add tests of universal-time slot
+	* test/test-ooddl.lisp: Test universal-time slot in an object
+	* TODO: Remove need for universal-time test	
+	* debian/rules, debian/control: Add cl-sql-oracle binary package
+	
 25 May 2004 Kevin Rosenberg <kevin@rosenberg.net>
 	* sql/oodml.lisp: (string n) now produces a CHAR field. Add new VARCHAR
 	type. Added *default-varchar-length* rather than previous hard-coded
