--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,9 @@
 	* test/test-ooddl.lisp: Test universal-time slot in an object
 	* TODO: Remove need for universal-time test	
 	* debian/rules, debian/control: Add cl-sql-oracle binary package
+	* doc/appendix.xml: Add Oracle backend information
+	* db-oracle/oracle-objects.lisp: Add database-get-type-specifier for
+	universal-time. Convert BIGINT CLSQL type to CHAR SQL type
 	
 25 May 2004 Kevin Rosenberg <kevin@rosenberg.net>
 	* sql/oodml.lisp: (string n) now produces a CHAR field. Add new VARCHAR
