--- a/TODO
+++ b/TODO
@@ -8,7 +8,7 @@ TESTS TO ADD
 * for-each-row macro
 * owner phrases for postgresql and oracle backends
 * Number and Char field types
-
+* Add test case for return type of (setf slot-value-using-class)
  
 VARIANCES FROM COMMONSQL
 
