--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
 	type (setf slot-value-using-class)
 	* db-sqlite: Remove clisp support since clisp can not run CLSQL
 	with its MOP usage
+	* db-oracle/oracle-sql.lisp: By default, use OCIEnvCreate as 
+	introduced in Oracle8. Leave older code selectable by a reader macro
+	for Oracle7 and prior.
 	
 26 May 2004 Kevin Rosenberg <kevin@rosenberg.net>
 	* sql/oodml.lisp: Commit universal-time typo patch from Edi Weitz
