--- a/ChangeLog
+++ b/ChangeLog
@@ -5,7 +5,8 @@
 	with its MOP usage
 	* db-oracle/oracle-sql.lisp: By default, use OCIEnvCreate as 
 	introduced in Oracle8. Leave older code selectable by a reader macro
-	for Oracle7 and prior.
+	for Oracle7 and prior. Avoid use of OCIServerAttach since CLSQL
+	uses OCILogon and does not the more complex session management.
 	
 26 May 2004 Kevin Rosenberg <kevin@rosenberg.net>
 	* sql/oodml.lisp: Commit universal-time typo patch from Edi Weitz
