--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+29 May 2004 Kevin Rosenberg <kevin@rosenberg.net>
+	* sql/package.lisp: Add API for prepared statments.
+	* sql/fdml.lisp: Change implicity flatp processing
+	for string map-query for greater CommonSQL conformance.
+	Add high-high API for prepared statements. Not complete.
+	* tests/test-basic.lisp: Add test for map-query and
+	single argument.
+	* sql/transactions.lisp: Change name/semantics of
+	autocommit to set-autocommit.
+	* sql/generic-postgresql.lisp: Add support for
+	prepared statements. 
+	* tests/test-internal.lisp: New file
+	
 27 May 2004 Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 2.11.3
 	* sql/ooddl.lisp: Commit patch from Edi Weitz fixing return
