--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,8 @@
 	prepared statements. 
 	* tests/test-internal.lisp: New file
 	* sql/odbc-api.lisp: Update to using ODBC V3 protocol
+	* clsql-mysql.asd, clsql-uffi.asd: Remove check and Common Lisp
+	Controller invocation.
 	
 27 May 2004 Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 2.11.3
