--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.11.4-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Sun, 30 May 2004 03:33:48 -0600
+
 cl-sql (2.11.3-1) unstable; urgency=low
 
   * New upstream
