--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 	* db-postgresql/postgresl-sql.lisp: Avoid computing
 	result-types lisp when nil result-types. Return only
 	one value when field-types nil.
+	* db-mysql/mysql-sql.lisp: Simple queries now
+	working with prepared statements.
 	
 30 May 2004 Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 2.11.4: MySQL 4.1 now passes all tests
