r9556:         * sql/transactions.lisp: Apply return value patch from         Edi Weitz for WITH-TRANSACTION

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 04 Jun 2004 Kevin Rosenberg <kevin@rosenberg.net>
 	* tests/README: Fix filename [reported by Bill Clementson]
+	* sql/transactions.lisp: Apply return value patch from
+	Edi Weitz for WITH-TRANSACTION
 	
 03 Jun 2004 Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 2.11.5 released
