--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.11.6-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Mon, 07 Jun 2004 13:01:23 -0600
+
 cl-sql (2.11.5-1) unstable; urgency=low
 
   * New upstream
