--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+10 Jun 2004 Kevin Rosenberg <kevin@rosenberg.net>
+	* Version 2.11.7 released
+	* uffi/clsql-uffi-loader.lisp: Apply patch from Edi Weitz
+	for loading with clc-register-user-package. Remove personal
+	directory from path lisp.
+	* db-mysql/mysql-loader.lisp: Similar changes
+	
 8 Jun 2004 Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 2.11.6 released
 	* sql/oodml.lisp: Commit patch from Edi Weitz
