--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.11.8-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Thu, 10 Jun 2004 03:43:11 -0600
+
 cl-sql (2.11.7-2) unstable; urgency=low
 
   * Move cl-sql-oracle to contrib 
