--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.11.9-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Sun, 13 Jun 2004 15:51:35 -0700
+
 cl-sql (2.11.8-1) unstable; urgency=low
 
   * New upstream
