r9622:         * sql/conditions.lisp: Fix printing of closed-database error

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 	WRITE-INSTANCE-TO-STREAM and READ-INSTANCE-FROM-STREAM
 	* sql/expressions.lisp: Avoid duplicate FROM names when selecting
 	from a table that has more than one primary index.
+	* sql/conditions.lisp: Fix printing of closed-database error
 	
 13 Jun 2004 Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 2.11.9
