--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 13 Jun 2004 Marcus Pearce <m.t.pearce@city.ac.uk> 
+	* Version 2.11.10
 	* sql/syntax.lisp: updated docstrings. 
 	* sql/package.lisp: exported DATABASE-NAME-FROM-SPEC from CLSQL 
 	package.
