--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.11.10-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Tue, 15 Jun 2004 18:45:47 -0600
+
 cl-sql (2.11.9-1) unstable; urgency=low
 
   * New upstream
