--- a/doc/TODO
+++ b/doc/TODO
@@ -4,12 +4,17 @@ DOCUMENTATION TO DO LIST
 
  - The SQL syntax state functions are macros in CLSQL. 
 
+ - CLSQL starts with in transaction AUTOCOMMIT mode. To begin a transaction,
+   START-TRANSACTION has to be called.
+
+
 2. Underdocumented CommonSQL features:
 
  - Retrieval immediate
  - SQL operators: ||, SUBSTR, MINUS, INTERSECT, UNION, NVL 
 
-2. CLSQL extensions to CommonSQL
+
+3. CLSQL extensions to CommonSQL
 
  - RESULT-TYPES, FIELD-NAMES keywords for SELECT, QUERY, DO-QUERY and 
    MAP-QUERY. 
@@ -20,12 +25,7 @@ DOCUMENTATION TO DO LIST
    sql-view-class, coalesce, except (just from a quick scan of 
    operations.lisp)
 
- - FDDL: list-views, view-exists-p, list-indexes, list-table-indexes,
-   index-exists-p, create-sequence, drop-sequence, list-sequences,
-   sequence-exists-p, sequence-next, sequence-last, set-sequence-position
-
- - FDML: TRUNCATE-DATABASE, DESCRIBE-TABLE, FOR-EACH-ROW and large object 
-   support. 
+ - FDML: TRUNCATE-DATABASE, FOR-EACH-ROW and large object support. 
 
  - OODML: *db-auto-sync*
 
@@ -35,18 +35,12 @@ DOCUMENTATION TO DO LIST
  - SQL-RECORDING-P: also accepts :both and :either values for the TYPE 
    parameter. 
 
- - DROP-TABLE/DROP-VIEW/DROP-INDEX: keyword arg :if-does-not-exist. 
-
- - DROP-INDEX: keyword arg :on (for MySQL). 
-
  - DEF-VIEW-CLASS: DB-CONSTRAINTS, DB-TYPE and VOID-VALUE slot options. 
-
- - CREATE-TABLE: keyword args :TRANSACTIONS (for MySQL) and :CONSTRAINTS;  
-                 description arg accepts optional DB-TYPE string. 
 
  - transactions: START-TRANSACTION and IN-TRANSACTION-P. 
 
  - Tranactions: AUTOCOMMIT
+
 
 4. Documenting lower level, non-CommonSQL functions (some of this is already 
    done). 
@@ -60,17 +54,22 @@ DOCUMENTATION TO DO LIST
 
  - MYSQL 
 
-   drop-index:   requires a table to be specified with the :from parameter
+   drop-index:   requires a table to be specified with the :on parameter
    views:        mysql does not support views  
    queries:      nested subqueries are not supported
    syntax:       doesn't support the sql concatenation operator (||). 
                  doesn't support INTERSECT/EXCEPT set operations. 
    create-table: the transactions keyword arg controls whether the created 
                  table is an InnoDB table (supporting transactions) or not. 
+   FDDL:         list-*/*-exists-p: :OWNER keyword argument ignored. 
 
  - SQLITE 
 
    connection:   specifying ":memory:" gives you an SQLite database in RAM.
    create-view:  column-list parameter not supported 
    syntax:       doesn't support the sql SUBSTRING operator. 
+   FDDL:         list-*/*-exists-p: :OWNER keyword argument ignored. 
 
+ - ODBC 
+
+   FDDL:         list-*/*-exists-p: :OWNER keyword argument ignored. 
