--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 18 Jun 2004 Marcus Pearce <m.t.pearce@city.ac.uk> 
+	* Version 2.11.11
 	* sql/expressions.lisp: when removing duplicate table identifiers 
 	in the FROM clause of a query, check both table name and alias 
 	are equivalent. 
