--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.11.11-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Wed, 23 Jun 2004 15:49:23 -0600
+
 cl-sql (2.11.10-1) unstable; urgency=low
 
   * New upstream
