--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.11.12-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Fri,  2 Jul 2004 20:41:21 -0600
+
 cl-sql (2.11.11-1) unstable; urgency=low
 
   * New upstream
