r9741: 8 Jul 2004 Kevin Rosenberg <kevin@rosenberg.net>         * sql/fdml.lisp: Apply patch from  Kim Minh Kaplan         to change escaping of single quotes. Mild optimizations         for escaped string output.         * TODO: Add need to test single quote escaping

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+8 Jul 2004 Kevin Rosenberg <kevin@rosenberg.net>
+	* sql/fdml.lisp: Apply patch from  Kim Minh Kaplan 
+	to change escaping of single quotes. Mild optimizations
+	for escaped string output.
+	* TODO: Add need to test single quote escaping
+	
 7 Jul 2004 Kevin Rosenberg <kevin@rosenberg.net>
 	* doc/ref-ooddl.xml, doc-ref-oodml.xml: documentation additions
 	* sql/ooddl.lisp: Added SMALLINT type
