--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+10 Jul 2004 Kevin Rosenberg <kevin@rosenberg.net>
+	* doc/*.xml: Midway through docbook schema fixes
+	
 9 Jul 2004 Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 2.11.13
 	* sql/fdml.lisp: Apply patch from Kim Minh Kaplan 
