--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 10 Jul 2004 Kevin Rosenberg <kevin@rosenberg.net>
-	* doc/*.xml: Midway through docbook schema fixes
+	* Version 2.11.14
+	* doc/*.xml: documentation additionals and fixes so
+	that docbook passes xmllint.
 	
 9 Jul 2004 Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 2.11.13
