--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.11.14-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Sat, 10 Jul 2004 19:25:15 -0600
+
 cl-sql (2.11.13-1) unstable; urgency=low
 
   * New upstream
