--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+12 Jul 2004 Kevin Rosenberg <kevin@rosenberg.net>
+	* db-sqlite/sqlite-sql.lisp: Fix condition as reported by Aurelio Bignoli.
+
 11 Jul 2004 Kevin Rosenberg <kevin@rosenberg.net>
 	* sql/oodml.lisp, sql/package.lisp, doc/ref-ooddl.lisp, db-mysql/mysql-objects.lisp: Add tinyint type
 	
