--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+14 Jul 2004 Marcus Pearce <m.t.pearce@city.ac.uk> 
+	* README, INSTALL: update URLs. Minor updates to descriptions. 
+	* tests/README: remove stuff about editing contexts. 
+
 12 Jul 2004 Kevin Rosenberg <kevin@rosenberg.net>
 	* db-oracle/oracle-objects.lisp: Change *default-varchar-length* to 
 	*default-string-length*
