--- a/README
+++ b/README
@@ -1,11 +1,18 @@
 CLSQL is a Common Lisp to SQL engine interface written by Kevin M.
-Rosenberg. It is based Pierre R. Mai's excellent MaiSQL package. It
-uses the UFFI (http://uffi.med-info.com) library for compatibility
-with Allegro CL, Lispworks, and CMUCL.
+Rosenberg. It includes both functional and object oriented subsystems
+for data definition and manipulation as well as an integrated symbolic
+SQL syntax. 
 
-CLSQL's home is http://clsql.med-info.com.
+CLSQL supports a number of RDBMS and uses the UFFI (http://uffi.b9.com) 
+library for compatibility with Allegro CL, Lispworks, CMUCL, SBCL and
+OpenMCL.
 
-Documentation is availabe as a PDF file in doc/clsql.pdf and
-as HTML files in doc/html/.
+CLSQL is based on Pierre R. Mai's excellent MaiSQL package and
+UncommonSQL developed at onShore Development Inc.
+
+CLSQL's home is http://clsql.b9.com.
+
+Documentation is availabe as a PDF file in doc/clsql.pdf and as HTML
+files in doc/html.tar.gz.
 
 
