--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.11.15-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Wed, 14 Jul 2004 21:42:41 -0600
+
 cl-sql (2.11.14-1) unstable; urgency=low
 
   * New upstream
